syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

package microsoft.eshoponcontainers.integrationevents.order.payment;

option csharp_namespace="Microsoft.eShopOnContainers.Services.Kafka.Protobuf.IntegrationEvents.OrderPayment";

message OrderPaymentFailedProto {
  int32 order_id = 1;
}